done all nop
